kubernetes/prowlarr/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prowlarr
  name: prowlarr
  namespace: prowlarr
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          ports:
          - name: http
            containerPort: 9696
          volumeMounts:
          - name: prowlarr-config
            mountPath: /config
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-pvc
            readOnly: false
