kubernetes/prowlarr/prod-d1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-web
  namespace: prowlarr
  labels:
    app: prowlarr
spec:
  type: ClusterIP
  ports:
    - port: 9696
      targetPort: 9696
      protocol: TCP
  selector:
    app: prowlarr
