kubernetes/prowlarr/prod-d1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-clusterissuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: prowlarr.kube-prod-d1.mclacken.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-web
                port:
                  number: 9696
  tls:
    - hosts:
        - prowlarr.kube-prod-d1.mclacken.net
      secretName: prowlarr-certificate-secret
